// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageHeader /> should adopt any children 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PageHeader
    isLeftHanded={true}
>
    <div>
        children
    </div>
</PageHeader>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <SpeechBubble
        arrowHeight="4vh"
        backgroundColor="#465a65"
        isLeftHanded={true}
        makeAppear={true}
        showArrowBreakpoint="750px"
>
        <H2__H2
                color="#aedd2c"
        >
                <div>
                        children
                </div>
        </H2__H2>
</SpeechBubble>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "arrowHeight": "4vh",
        "backgroundColor": "#465a65",
        "children": <H2__H2
          color="#aedd2c"
>
          <div>
                    children
          </div>
</H2__H2>,
        "isLeftHanded": true,
        "makeAppear": true,
        "showArrowBreakpoint": "750px",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div>
            children
</div>,
          "color": "#aedd2c",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "children",
          },
          "ref": null,
          "rendered": "children",
          "type": "div",
        },
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <SpeechBubble
          arrowHeight="4vh"
          backgroundColor="#465a65"
          isLeftHanded={true}
          makeAppear={true}
          showArrowBreakpoint="750px"
>
          <H2__H2
                    color="#aedd2c"
          >
                    <div>
                              children
                    </div>
          </H2__H2>
</SpeechBubble>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "arrowHeight": "4vh",
          "backgroundColor": "#465a65",
          "children": <H2__H2
            color="#aedd2c"
>
            <div>
                        children
            </div>
</H2__H2>,
          "isLeftHanded": true,
          "makeAppear": true,
          "showArrowBreakpoint": "750px",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div>
              children
</div>,
            "color": "#aedd2c",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "children",
            },
            "ref": null,
            "rendered": "children",
            "type": "div",
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<PageHeader /> should render and match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PageHeader
    isLeftHanded={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <SpeechBubble
        arrowHeight="4vh"
        backgroundColor="#465a65"
        isLeftHanded={true}
        makeAppear={true}
        showArrowBreakpoint="750px"
>
        <H2__H2
                color="#aedd2c"
        />
</SpeechBubble>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "arrowHeight": "4vh",
        "backgroundColor": "#465a65",
        "children": <H2__H2
          color="#aedd2c"
/>,
        "isLeftHanded": true,
        "makeAppear": true,
        "showArrowBreakpoint": "750px",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": undefined,
          "color": "#aedd2c",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <SpeechBubble
          arrowHeight="4vh"
          backgroundColor="#465a65"
          isLeftHanded={true}
          makeAppear={true}
          showArrowBreakpoint="750px"
>
          <H2__H2
                    color="#aedd2c"
          />
</SpeechBubble>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "arrowHeight": "4vh",
          "backgroundColor": "#465a65",
          "children": <H2__H2
            color="#aedd2c"
/>,
          "isLeftHanded": true,
          "makeAppear": true,
          "showArrowBreakpoint": "750px",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "color": "#aedd2c",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
